Add initial KB Sports files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="croping39.PNG" alt="" alt=""></td>
+      <td><img src="croping39.png" alt="C:\Users\Bovi\Desktop\web development\HTML - personal site" alt=""></td>
         <td><h1>Kemelite</h1>
           <p><em>Founder and CEO of KB sports</em></p>
           <p> I am a girl who loves the beautiful game of soccer. I love Manchester United football club.</p></td>
