Add initial KB Sports files

--- a/Contact.html
+++ b/Contact.html
@@ -11,15 +11,14 @@
     <p>08119057872</p>
     <p>osikemelite42@gmail.com</p>
     <hr>
-<form action=">mailto:osikemelite42@gmail.com" method="post" enctype="text/plain">
-<form action>Kindly leave a feedback.</form><br>
+<form action="mailto:osikemelite42@gmail.com" method="post" enctype="text/plain"
 <label>Your Name:</label>
-<input type="text"><br></br>
+<input type="text"name="YourName" value=""><br></br>
 <label>Your Email:</label>
-<input type="text"><br></br>
+<input type="email" name="yourEmail"><br></br>
 <label>Your message:</label></br>
-<textarea name="" id="" cols="30" rows="10"></textarea>
-<input type="submit"><br></br>
+<textarea name="yourMessage" id="" cols="30" rows="10"></textarea>
+<input type="submit" name="">
 </form>
 </body>
 </html>
